force-app/main/default/objects/LASERCA__Trade_Accounts__c/LASERCA__Trade_Accounts__c.object-meta.xml
<CustomObject>
    <description>The Liability Accounts listed on the credit report.</description>
    <label>Trade Accounts</label>
    <nameField>
        
        <label>Trade Accounts Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Trade Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>