force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/Exclude_From_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Excludes this trade account&apos;s monthly debt from the PCR &quot;Adjusted Monthly Personal Debt&quot; field, set by Avidia to remove trade accounts that are double-counted between main and co-applicants.</inlineHelpText>
    <label>Exclude From Rollup</label>
    <type>Checkbox</type>
</CustomField>