force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Balance__c</fullName>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>