force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Balance_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Balance_Date__c</fullName>
    <label>Account Balance Date</label>
    <type>Date</type>
</CustomField>