force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Closed_date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Closed_date__c</fullName>
    <label>Account Closed Date</label>
    <type>Date</type>
</CustomField>