force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Ownership_Type__c</fullName>
    <inlineHelpText>Account Ownership; Authorized User, Comaker, Individual, Joint Contractual Liability, Joint Participating, Maker, On Behalf Of, Terminated, Undesignated</inlineHelpText>
    <label>Account Ownership Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>