force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Status_Type__c</fullName>
    <inlineHelpText>The status of the accout; Open, Closed, Frozen,Paid, Refinanced, Transferred</inlineHelpText>
    <label>Account Status Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>