force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Account_Type__c</fullName>
    <inlineHelpText>Type of account; Credit Line, Installment, Mortgage, Open revolving or Unknown</inlineHelpText>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>