force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Charge_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Charge_Off_Date__c</fullName>
    <label>Charge Off Date</label>
    <type>Date</type>
</CustomField>