force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Code__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Code__c</fullName>
    <label>Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>