force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Credit_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Business_Type__c</fullName>
    <inlineHelpText>Credit Grantor Type</inlineHelpText>
    <label>Credit Business Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>