force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Credit_Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Comment_Text__c</fullName>
    <label>Credit Comment - Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>