force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Limit__c</fullName>
    <description>Credit Limit is used on revolving accounts</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>