force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Credit_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Loan_Type__c</fullName>
    <inlineHelpText>Type of Debt</inlineHelpText>
    <label>Credit Loan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>