force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Credit_Text__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Credit_Text__c</fullName>
    <label>Credit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>