force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Date__c</fullName>
    <description>Most Recent Adverse Action Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>