force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__ECOA__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__ECOA__c</fullName>
    <label>ECOA</label>
    <length>1</length>
    <type>Text</type>
</CustomField>