force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__H_Code__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__H_Code__c</fullName>
    <label>Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>