force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__H_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__H_Date__c</fullName>
    <description>Highest adverse action date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>