force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__H_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__H_Type__c</fullName>
    <description>Highest adverser action type</description>
    <label>Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>