force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__High_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__High_Credit_Amount__c</fullName>
    <label>High Credit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>