force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Last_Activity_Date__c</fullName>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>