force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Monthly_Payment__c</fullName>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>