force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Months_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Months_Reviewed__c</fullName>
    <label>Months Reviewed</label>
    <length>5</length>
    <type>Text</type>
</CustomField>