force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Name_of_the_Institution__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Name_of_the_Institution__c</fullName>
    <description>Name of the debt holder</description>
    <label>Name of the Institution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>