force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Open_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Open_Date__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>