force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Original_Creditor__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Original_Creditor__c</fullName>
    <label>Original Creditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>