force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Original_Term__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Original_Term__c</fullName>
    <label>Original Term</label>
    <length>5</length>
    <type>Text</type>
</CustomField>