force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Past_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Past_Due_Amount__c</fullName>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>