force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Payment_Pattern_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Payment_Pattern_Start_Date__c</fullName>
    <label>Payment Pattern Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>