force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Personal_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Personal_Credit_Report__c</fullName>
    <label>Personal Credit Report</label>
    <referenceTo>LASERCA__Personal_Credit_Report__c</referenceTo>
    <relationshipLabel>Trade Accounts</relationshipLabel>
    <relationshipName>Trade_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>