force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Rating_Code__c</fullName>
    <label>Rating Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>