force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Rating_Type__c</fullName>
    <label>Rating Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>