force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Remaining_Term__c</fullName>
    <label>Remaining Term</label>
    <length>15</length>
    <type>Text</type>
</CustomField>