force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__Type__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__Type__c</fullName>
    <description>Type; Most Recent Adverse action</description>
    <label>Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>