force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__X30_days_late__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__X30_days_late__c</fullName>
    <label>30 days late</label>
    <length>5</length>
    <type>Text</type>
</CustomField>