force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/LASERCA__X60_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__X60_Days_Late__c</fullName>
    <label>60 days Late</label>
    <length>5</length>
    <type>Text</type>
</CustomField>