force-app/main/default/objects/LASERCA__Trade_Accounts__c/fields/Personal_Credit_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit_Report_ID__c</fullName>
    <formula>LASERCA__Personal_Credit_Report__r.Id</formula>
    <label>Personal Credit Report ID</label>
    <type>Text</type>
</CustomField>